# wapabawama_ros

./: .gitmodules
darknet_ros/darknet_ros/: CMakeLists.txt
lgv_msgs/: CMakeLists.txt  package.xml
spinnaker_camera_driver/launch/: camera.launch  stereo.launch
wapabawama_ros/: CMakeLists.txt  package.xml
wapabawama_ros/include/: centroidtracker.h  lgv.h  perspective.h
wapabawama_ros/launch/: SORT.launch  centroid.launch  counting.launch  detect.launch  detect_left.launch  detect_right.launch  detect_single.launch  detect_test.launch  move.launch  move_test.launch  show_detect.launch  simu.launch  single.launch  start.launch  start_tracking.launch  test.launch  testwaterting.launch  tf.launch  watering.launch
wapabawama_ros/msg/: lgv.msg  lgvs.msg  moisture.msg
wapabawama_ros/resources/: rviz.rviz  rviz2.rviz
wapabawama_ros/scripts/: dump_path.py  gantry_script.py  motor_response.py  object_tracker copy.py  object_tracker.py  set_gantry_speed.py  set_valve_pwm.py  sort copy.py  sort.py
wapabawama_ros/src/: centroidtracker.cpp  detect_water_v1.cpp  follower.cpp  lgv.cpp  lgv_detector.cpp  lgv_detector_cv copy.cpp  lgv_detector_cv.cpp  lgv_detector_img.cpp  lgv_detector_simu.cpp  lgv_detector_test.cpp  lgv_recorder copy.cpp  lgv_recorder.cpp  lgv_tracker.cpp  movie.cpp  path_planner copy.cpp  path_planner.cpp  perspective.cpp  pwm.cpp  record_place.cpp  set_command.cpp  set_command_simu.cpp  (+7 more)
wapabawama_ros/src/system/: CMakeLists.txt  Makefile
wapabawama_ros/src/system/include/: c_serial.h  system.hpp
wapabawama_ros/src/system/src/: main.cpp  system.cpp
(+32 files in other folders)
